Now that all PRNG modules fit nicely into a single source file, simplify the PRNG abstraction, flattening the implementations into crypto/krb and removing the indirection through function pointers. Move the guts of the NSS PRNG implementation into the nss subdir so that crypto/krb doesn't need to be built with CRYPTO_IMPL_CFLAGS.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24661 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -1123,8 +1123,7 @@ V5_AC_OUTPUT_MAKEFILE(.
 	lib/crypto/krb/old lib/crypto/krb/raw
         lib/crypto/$CRYPTO_IMPL/sha1
         lib/crypto/$CRYPTO_IMPL/sha2
-	lib/crypto/krb/arcfour lib/crypto/krb/prng
-	lib/crypto/krb/prng/$PRNG_ALG
+	lib/crypto/krb/arcfour
 	lib/crypto/$CRYPTO_IMPL/aes
 	lib/crypto/$CRYPTO_IMPL/camellia lib/crypto/crypto_tests
 
