--- a/src/configure.in
+++ b/src/configure.in
@@ -1118,8 +1118,8 @@ V5_AC_OUTPUT_MAKEFILE(.
 	lib/crypto lib/crypto/krb lib/crypto/krb/crc32 lib/crypto/$CRYPTO_IMPL/des
 	lib/crypto/krb/dk lib/crypto/$CRYPTO_IMPL/enc_provider
 	lib/crypto/$CRYPTO_IMPL/hash_provider lib/crypto/krb/checksum
-	lib/crypto/krb/prf lib/crypto/krb/rand2key
-	lib/crypto/$CRYPTO_IMPL lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
+	lib/crypto/krb/prf lib/crypto/$CRYPTO_IMPL
+	lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
 	lib/crypto/krb/old lib/crypto/krb/raw
         lib/crypto/$CRYPTO_IMPL/sha1
         lib/crypto/$CRYPTO_IMPL/sha2
