--- a/src/lib/crypto/krb/arcfour/Makefile.in
+++ b/src/lib/crypto/krb/arcfour/Makefile.in
@@ -1,7 +1,7 @@
 mydir=lib$(S)crypto$(S)krb$(S)arcfour
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
 LOCALINCLUDES = -I$(srcdir)/.. -I$(srcdir)/../../$(CRYPTO_IMPL) \
-	-I$(srcdir)/../../$(CRYPTO_IMPL)/md4
+	-I$(srcdir)/../../$(CRYPTO_IMPL)/hash_provider
 DEFS=
 
 ##DOS##BUILDTOP = ..\..\..\..
