--- a/src/configure.in
+++ b/src/configure.in
@@ -1115,17 +1115,14 @@ V5_AC_OUTPUT_MAKEFILE(.
 
 	lib lib/kdb
 
-	lib/crypto lib/crypto/krb lib/crypto/krb/crc32 lib/crypto/$CRYPTO_IMPL/des
-	lib/crypto/krb/dk lib/crypto/$CRYPTO_IMPL/enc_provider
-	lib/crypto/$CRYPTO_IMPL/hash_provider lib/crypto/krb/checksum
-	lib/crypto/krb/prf lib/crypto/$CRYPTO_IMPL
+	lib/crypto lib/crypto/krb lib/crypto/$CRYPTO_IMPL
+	lib/crypto/$CRYPTO_IMPL/enc_provider
+	lib/crypto/$CRYPTO_IMPL/hash_provider
+	lib/crypto/$CRYPTO_IMPL/des
 	lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
-	lib/crypto/krb/old lib/crypto/krb/raw
-        lib/crypto/$CRYPTO_IMPL/sha1
-        lib/crypto/$CRYPTO_IMPL/sha2
-	lib/crypto/krb/arcfour
-	lib/crypto/$CRYPTO_IMPL/aes
-	lib/crypto/$CRYPTO_IMPL/camellia lib/crypto/crypto_tests
+        lib/crypto/$CRYPTO_IMPL/sha1 lib/crypto/$CRYPTO_IMPL/sha2
+	lib/crypto/$CRYPTO_IMPL/aes lib/crypto/$CRYPTO_IMPL/camellia
+	lib/crypto/crypto_tests
 
 	lib/krb5 lib/krb5/error_tables lib/krb5/asn.1 lib/krb5/ccache
 dnl	lib/krb5/ccache/ccapi
