--- a/src/tests/gssapi/Makefile.in
+++ b/src/tests/gssapi/Makefile.in
@@ -31,5 +31,6 @@ t_saslname: t_saslname.o $(GSS_DEPLIBS) $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o t_saslname t_saslname.o $(GSS_LIBS) $(KRB5_BASE_LIBS)
 
 clean::
-	$(RM) t_imp_name t_s4u t_namingexts t_gssexts t_spnego t_saslname
+	$(RM) t_accname t_imp_name t_s4u t_namingexts t_gssexts \
+		t_spnego t_saslname
 
