Add a script and Makefile target to check for violations of the recently added standards for copyright and license comments.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24694 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -749,6 +749,11 @@ mark-cstyle-bsd::
 	(cd $(top_srcdir) && $(FIND) $(BSDFILES) -print0 | $(XARGS) -0 \
 	$(PYTHON) util/krb5-mark-cstyle.py --cstyle=bsd)
 
+check-copyright:
+	(cd $(top_srcdir) && \
+	$(FIND) . \( -name '*.[ch]' -o -name '*.hin' \) -print0 | \
+	$(XARGS) -0 python util/krb5-check-copyright.py)
+
 doxygen::
 	if test "which doxygen" != ""; then \
 		doxygen; \
