Move the des and AFS string-to-key implementations into lib/crypto/krb, since they aren't standard crypto primitives.  Revise the module SPI accordingly.  Add tests for AFS string-to-key to t_str2key.c to replace the ones in the (now defunct) t_afss2k.c.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24699 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/nss/des/Makefile.in
+++ b/src/lib/crypto/nss/des/Makefile.in
@@ -9,17 +9,11 @@ RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
-STLIBOBJS= des_oldapis.o \
-	f_parity.o 	\
-	string2key.o
+STLIBOBJS= des_keys.o
 
-OBJS=	$(OUTPRE)f_parity.$(OBJEXT) 	\
-	$(OUTPRE)des_oldapis.$(OBJEXT) 	\
-	$(OUTPRE)string2key.$(OBJEXT)
+OBJS= $(OUTPRE)des_keys.$(OBJEXT)
 
-SRCS=	$(srcdir)/f_parity.c	\
-	$(srcdir)/des_oldapis.c	\
-	$(srcdir)/string2key.c
+SRCS= $(srcdir)/des_keys.c
 
 all-unix:: all-libobjs
 
