--- a/src/lib/krb5/krb/Makefile.in
+++ b/src/lib/krb5/krb/Makefile.in
@@ -394,6 +394,9 @@ t_etypes: $(T_ETYPES_OBJS) $(KRB5_BASE_DEPLIBS)
 t_expire_warn: t_expire_warn.o $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o $@ t_expire_warn.o $(KRB5_BASE_LIBS)
 
+t_vfy_increds: t_vfy_increds.o $(KRB5_BASE_DEPLIBS)
+	$(CC_LINK) -o $@ t_vfy_increds.o $(KRB5_BASE_LIBS)
+
 TEST_PROGS= t_walk_rtree t_kerb t_ser t_deltat t_expand t_authdata t_pac \
 	t_princ t_etypes
 
@@ -434,8 +437,9 @@ check-unix:: $(TEST_PROGS)
 	$(RUN_SETUP) $(VALGRIND) ./t_princ
 	$(RUN_SETUP) $(VALGRIND) ./t_etypes
 
-check-pytests:: t_expire_warn
+check-pytests:: t_expire_warn t_vfy_increds
 	$(RUNPYTEST) $(srcdir)/t_expire_warn.py $(PYTESTFLAGS)
+	$(RUNPYTEST) $(srcdir)/t_vfy_increds.py $(PYTESTFLAGS)
 
 clean::
 	$(RM) $(OUTPRE)t_walk_rtree$(EXEEXT) $(OUTPRE)t_walk_rtree.$(OBJEXT) \
