In libkrb5, move krb5int_auth_con_chkseqnum to a new file privsafe.c, renamed to k5_privsafe_check_seqnum.  Declare it in int-proto.h rather than k5-int.h.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24805 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/krb5/krb/Makefile.in
+++ b/src/lib/krb5/krb/Makefile.in
@@ -79,6 +79,7 @@ STLIBOBJS= \
 	preauth2.o	\
 	gic_opt_set_pa.o	\
 	princ_comp.o	\
+	privsafe.o	\
 	rd_cred.o	\
 	rd_error.o	\
 	rd_priv.o	\
@@ -181,6 +182,7 @@ OBJS=	$(OUTPRE)addr_comp.$(OBJEXT)	\
 	$(OUTPRE)preauth2.$(OBJEXT)	\
 	$(OUTPRE)gic_opt_set_pa.$(OBJEXT)	\
 	$(OUTPRE)princ_comp.$(OBJEXT)	\
+	$(OUTPRE)privsafe.$(OBJEXT)	\
 	$(OUTPRE)rd_cred.$(OBJEXT)	\
 	$(OUTPRE)rd_error.$(OBJEXT)	\
 	$(OUTPRE)rd_priv.$(OBJEXT)	\
@@ -283,6 +285,7 @@ SRCS=	$(srcdir)/addr_comp.c	\
 	$(srcdir)/preauth2.c	\
 	$(srcdir)/gic_opt_set_pa.c	\
 	$(srcdir)/princ_comp.c	\
+	$(srcdir)/privsafe.c	\
 	$(srcdir)/rd_cred.c	\
 	$(srcdir)/rd_error.c	\
 	$(srcdir)/rd_priv.c	\
