ticket: 6906 subject: modernize doc/Makefile somewhat status: open
Modernize doc/Makefile somewhat so that it can run more usefully on
modern non-Athena machines.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24909 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 SRCDIR=../src
-DVI=texi2dvi4a2ps	# texi2dvi
+DVI=texi2dvi
 DVIPS=dvips -o "$@"
 PSPDF=ps2pdf
 INFO=makeinfo
@@ -9,7 +9,8 @@ TAR=tar -chvf
 GZIP=gzip -9
 MANPS=./man2ps
 MANTXT=nroff -man 
-MANHTML=./man2html
+PERL=perl
+MANHTML=$(PERL) man2html
 
 ADMIN_INCLUDES=definitions.texinfo copyright.texinfo document-list.texinfo \
 	glossary.texinfo support-enc.texinfo salts.texinfo krb5conf.texinfo \
