--- a/src/util/gss-kernel-lib/Makefile.in
+++ b/src/util/gss-kernel-lib/Makefile.in
@@ -5,6 +5,7 @@ KRB5_RUN_ENV=@KRB5_RUN_ENV@
 
 DEFINES=-DKRB5_KERNEL
 ALL_CFLAGS=$(CFLAGS) $(DEFS) $(DEFINES) -I. -Igssapi
+PROG_LIBPATH=-L$(TOPLIBD)
 
 SHLIB_EXPDEPS = \
 	$(TOPLIBD)/libk5crypto$(SHLIBEXT) \
